<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_primary"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/plant_background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_primary"
        android:alpha="0.92" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plant_identification"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="32sp"
                android:textColor="@color/light_secondary" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivPlant"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cvTopBar"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/plant_picture" />

    <Button
        android:id="@+id/btnSelectPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_photo_button"
        android:textSize="24sp"
        android:textColor="@color/light_secondary"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ivPlant"
        android:layout_marginTop="20dp" />


    <Button
        android:id="@+id/btnIdentifyPlant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identify_plant_button"
        android:textSize="24sp"
        android:textColor="@color/light_secondary"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnSelectPhoto"
        android:layout_marginTop="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPlantName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="28dp"
        android:layout_marginBottom="-20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="28dp">

            <TextView
                android:id="@+id/tvPlantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_plant"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                android:textSize="32sp"
                android:textColor="@color/light_secondary"
                android:textAlignment="center" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>